--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -59,7 +59,7 @@ jobs:
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/ec2
           chmod 600 ~/.ssh/ec2
-          echo "$SSH_KNOWN_HOSTS_PROD" > ~/.ssh/known_hosts
+          echo "$SSH_KNOWN_HOSTS_PROD" > ~/.ssh/known_hosts.old
 
       - name: Extract Java ZIP file on EC2 instance
         run: |
