--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,6 +35,27 @@ jobs:
           java-version: "11"
           distribution: "temurin"
           cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Build Artifact
+        run: |
+          mvn clean install
+          cd target
+
+      - name: Zip Artifact
+        run: echo "current build number is "
+          pwd
+          mkdir -p codedeploy_artifact
+          cd codedeploy_artifact
+          cp ../pom.xml .
+          cp ../target/webapp-0.0.1-SNAPSHOT.jar .
+          cp ../src/main/resources/*.properties .
+          zip -r csye6225-web-app.zip .
+          rm *.xml *.properties *.jar
+          ls -al
+          pwd
+          cd ..
+          pwd
 
       - name: Install awscli
         run: |
@@ -54,19 +75,39 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE }}
           SSH_PUBLIC_KEY: ${{ secrets.SSH_PUB}}
-          SSH_KNOWN_HOSTS_PROD: ${{ secrets.HOST }}
+
         run: |
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/ec2
           chmod 600 ~/.ssh/ec2
           echo "$SSH_KNOWN_HOSTS_PROD" > ~/.ssh/known_hosts.old
 
+      - name: Terraform Apply
+        id: terraform-apply
+        run: |
+          cd aws-infra-main
+          terraform init
+          terraform destroy -auto-approve -var "aws_access_key=${aws_access_key_demo}" -var "aws_secret_key=${aws_secret_key_demo}" 
+          terraform apply -auto-approve -var "aws_access_key=${aws_access_key_demo}" -var "aws_secret_key=${aws_secret_key_demo}" 
+          INSTANCE_PUBLIC_IP=$(terraform output public_ip | tr -d '"')
+          echo "ip=${INSTANCE_PUBLIC_IP}" >> $GITHUB_ENV
+
+      - name: Wait 2 minutes
+        run: sleep 2m
+
+      - name: Copy file to remote server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{env.ip}}
+          username: ec2-user
+          key: ${{ secrets.SSH_PRIVATE_KEY }} # Private key stored in GitHub secrets
+          port: 22
+          source: codedeploy_artifact/csye6225-web-app.zip
+          target: ~/ # Destination directory in the remote server
+
       - name: Extract Java ZIP file on EC2 instance
         run: |
-         ssh -i ~/.ssh/ec2 -o UserKnownHostsFile=~/.ssh/known_hosts.old -o StrictHostKeyChecking=no -tt ec2-user@35.90.193.213 "unzip -o /home/ec2-user/csye6225-web-app.zip -d /usr/local/tomcat/webapps"
-
-
-
+          ssh -i ~/.ssh/ec2 -o UserKnownHostsFile=~/.ssh/known_hosts.old -o StrictHostKeyChecking=no -tt ec2-user@${{env.ip}} "unzip -o /home/ec2-user/csye6225-web-app.zip -d /usr/local/tomcat/webapps"
       - name: Start application on EC2 using screen
         run: |
-          ssh -i ~/.ssh/ec2 -o UserKnownHostsFile=~/.ssh/known_hosts.old -o StrictHostKeyChecking=no -tt ec2-user@35.90.193.213 "screen -dmS csye6225-web-app java -jar /usr/local/tomcat/webapps/webapp-0.0.1-SNAPSHOT.jar"
+          ssh -i ~/.ssh/ec2 -o UserKnownHostsFile=~/.ssh/known_hosts.old -o StrictHostKeyChecking=no -tt ec2-user@${{env.ip}} "screen -dmS csye6225-web-app java -jar /usr/local/tomcat/webapps/webapp-0.0.1-SNAPSHOT.jar"
