--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -100,7 +100,7 @@ jobs:
         with:
           host: ${{env.ip}}
           username: ec2-user
-          key: ${{ secrets.SSH_PRIVATE_KEY }} # Private key stored in GitHub secrets
+          key: ${{ secrets.SSH_PRIVATE }} # Private key stored in GitHub secrets
           port: 22
           source: codedeploy_artifact/csye6225-web-app.zip
           target: ~/ # Destination directory in the remote server
