--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,22 @@
-spring.datasource.url=jdbc:mysql://${DB_HOSTNAME}/csye6225
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-server.port=8080
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto = update
-spring.main.allow-bean-definition-overriding=true
-
-# spring.datasource.url=jdbc:mysql://localhost:3306/6225WebApp
-# spring.datasource.username=root
-# spring.datasource.password=tyw199639
+# spring.datasource.url=jdbc:mysql://${DB_HOSTNAME}/csye6225
+# spring.datasource.username=${DB_USERNAME}
+# spring.datasource.password=${DB_PASSWORD}
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# server.port=8083
+# server.port=8080
 
 # spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # spring.jpa.hibernate.ddl-auto = update
 # spring.main.allow-bean-definition-overriding=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/6225WebApp
+spring.datasource.username=root
+spring.datasource.password=tyw199639
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+server.port=8083
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto = update
+spring.main.allow-bean-definition-overriding=true
 
