--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
     <artifactId>aws-java-sdk-s3</artifactId>
     <version>1.12.450</version>
 </dependency>
+  <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.20</version>
+    <scope>provided</scope>
+  </dependency>
 
 
     </dependencies>
